# fff_parse

./: .gitignore  Cargo.toml  README.md  build.rs  flex_color.md
.cargo/: config.toml
docs/: flexcolor-reverse-engineering.md  pipeline-status.md  roadmap-2026-06-productization.md  session-2026-04-30.md  test-comparison.md  windows-release-handoff.md  windows-release-result.md
examples/: _icc_info.rs  bw_diag.rs  chart_analyze.rs  chart_cases.toml  color_compare.rs  color_diag.rs  diag_entries.rs  extract_lut.rs  gen_chart_ffcs.rs  gen_variant_ffcs.rs  gen_variants.rs  histogram_stages.rs  ifd_probe.rs  pipeline_diag.rs  profile_load.rs  scan_fff_summary.rs  test_cases.toml  thumb_cmp.rs  tif_compare.rs  trace_extraction.rs  variants_cases.toml
icons/: AppIcon.icns
installer/windows/: fff-viewer.iss
profiles/: Flextight 2848 ref.icc  Flextight 2848 v2.icc  Flextight 343 v2.icc  Flextight Input.icc  Flextight X1 848 & 646.icc  Flextight X5 & 949.icc  Hasselblad 250GCR 40K90.icc  Hasselblad 280GCR 30K90.icc  Hasselblad 330GCR 20K95.icc  Hasselblad 330Skel 30K75.icc  Hasselblad 350GCR 20K95.icc  Hasselblad 350Skel 30K90.icc  Hasselblad Gray.icc  Leica DMR.icc
profiles/variants/: v_brightness_+100.xml  v_brightness_+20.xml  v_brightness_+50.xml  v_brightness_-100.xml  v_brightness_-20.xml  v_brightness_-50.xml  v_contrast_+100.xml  v_contrast_+20.xml  v_contrast_+50.xml  v_contrast_-100.xml  v_contrast_-20.xml  v_contrast_-50.xml  v_gamma_150.xml  v_gamma_175.xml  v_gamma_200.xml  v_gamma_225.xml  v_gamma_250.xml  v_lightness_000.xml  v_lightness_020.xml  v_lightness_050.xml  v_lightness_075.xml  v_lightness_100.xml  v_saturation_+20.xml  v_saturation_+50.xml  v_saturation_-20.xml  v_saturation_-50.xml
scripts/: build-macos.sh  build-windows.ps1
settings/Standard Negative/: B&W negative standard.xml  (+4 more)
src/: color.rs  config.rs  flexcolor.rs  i18n.rs  lib.rs  main.rs  parse_test.rs  sidecar.rs  tags.rs  tiff.rs  viewer.rs
src/color/: adjust.rs  (+7 more)
tools/: compare_phase2.py  compare_phase3.py  compare_phase4.py  compare_pipeline.py
(+165 files in other folders)
